Object and listObject and if_unless

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,9 @@ userSurname=userSurname
 emailAddress=emailAddress
 userAge=userAge
 userMessage=userMessage
+
+productId=productId
+productName=Urun Adi
+productTrade=Urun Markas?
+productPrice=Urun Fiyati
+productInformation=Urun Hakkinda
