--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,11 +1,13 @@
 adi=Hamit
 soyadi=Mizrak
+
 form=form validation
 userName=userName
 userSurname=userSurname
 emailAddress=emailAddress
 userAge=userAge
 userMessage=userMessage
+submit=Gonder
 
 productId=productId
 productName=Urun Adi
