--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,11 +2,14 @@ adi=Hamit
 soyadi=Mizrak
 
 form=form validation
-userName=userName
-userSurname=userSurname
-emailAddress=emailAddress
-userAge=userAge
-userMessage=userMessage
+id=validation id
+userName=adi
+userSurname=soyadi
+emailAddress=email adres
+userAge=yas
+userMessage=mesage
+userPhone=telefon
+date=tarih
 submit=Gonder
 
 productId=productId
