--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,15 +2,15 @@ adi=Hamit
 soyadi=Mizrak
 
 form=form validation
-id=validation id
+id=validation ?d
 userName=adi
-userSurname=soyadi
+userSurname=soyad?
 emailAddress=email adres
 userAge=yas
 userMessage=mesage
 userPhone=telefon
 date=tarih
-submit=Gonder
+submit=Gönder
 
 productId=productId
 productName=Urun Adi
