--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,6 +14,6 @@ submit=Gönder
 
 productId=productId
 productName=Urun Adi
-productTrade=Urun Markas?
+productTrade=Urun Markasi
 productPrice=Urun Fiyati
 productInformation=Urun Hakkinda
