--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,15 +2,17 @@ adi=Hamit
 soyadi=Mizrak
 
 form=form validation
-id=validation ?d
+id=validation id
 userName=adi
-userSurname=soyad?
+userSurname=soyadi
 emailAddress=email adres
 userAge=yas
 userMessage=mesage
 userPhone=telefon
 date=tarih
 submit=Gönder
+userEmail=email adres
+userPassword=sifre
 
 productId=productId
 productName=Urun Adi
